Fixing nav bar issue on smaller screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,13 +31,17 @@ p {
 
 /*--------------------------------------- Navbar*/
 
-.nav-wrapper {
+
+.navbar {
+    position: fixed;
     background-color: #fafafa;
-     position:  fixed;
-    height: 100px;
-    width: 100vw;
-    align-items: center;
      z-index: 99999;
+     width: 100%;
+}
+
+.navbar-nav{
+  float: left;
+  margin-left: 70%;
 }
 
 .nav-item {
@@ -53,10 +57,10 @@ p {
 
 .nav-item a {
     font-size: 1.5em;
-    padding: 0 50px;
+    padding: 0 70px;
     text-decoration: none;
     color: #777777; 
-    justify-content: center;
+    justify-content: right;
 }
 
 a:hover {
@@ -305,18 +309,15 @@ footer p {
         text-align: center;
         font-size: 30px;       
     }
-    .menu-items{
-        text-align: center;
-        padding-left: 15%;
-        
-    }
-     .nav-item li {
+     .nav-item  {
      margin-top: 5%;         
-     font-size: 10px;
+     font-size: 1rem;
      line-height: 5px;
     }
-   
-
+   .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: .5rem;
+  
+}
     .learn-more-btn {
         margin-left: 40%;
         padding-top: 50%;
